structmeta-tests/tests/compile_fail/struct_meta/similar_name.stderr
error: cannot find parameter `value` in this scope (help: a parameter with a similar name exists: `value`)
 --> $DIR/similar_name.rs:1:46
  |
1 | #[structmeta_tests::attr_required_name_value(value = 10)]
  |                                              ^^^^
